added css file and move all css into it

--- a/twitter_clone/templates/edit_tweet.html
+++ b/twitter_clone/templates/edit_tweet.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% block title %}Tweet Editing{% endblock %}
+
 {% block content %}
 <div class="container">
     <h2>Edit Tweet</h2>
