--- a/twitter_clone/templates/edit_profile.html
+++ b/twitter_clone/templates/edit_profile.html
@@ -1,11 +1,9 @@
 {% extends "base.html" %}
-
+{% load static%}
+{% block title %}Profile Editing{% endblock %}
 {% block content %}
-{% comment %} <style>
-    body {
-        background-color: black;
-        color: white;
-    } {% endcomment %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+
 </style>
     <div class="container mt-4">
         <h1>Edit Profile</h1>
