--- a/twitter_clone/templates/navbar.html
+++ b/twitter_clone/templates/navbar.html
@@ -1,52 +1,4 @@
-{% comment %} {% extends "base.html" %}
-
-{% block title %}Navbar{% endblock %}
-
-{% block content %} {% endcomment %}
-<style>
-/* Basic styling */
-/* Navbar styling */
-.navbar {
-  background: linear-gradient(135deg, #333, #1a1a2e); /* Greyish to dark bluish gradient */
-}
-
-.navbar-nav .nav-item .nav-link {
-  display: flex;
-  align-items: center; /* Ensure vertical alignment */
-}
-
-/* Dropdown menu styling */
-.dropdown-menu {
-  display: none;
-  position: absolute;
-  top: 100%;
-  right: 0;
-  background-color: #333;
-  border-radius: 5px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  z-index: 1000;
-  transition: opacity 0.3s ease, visibility 0.3s ease;
-  opacity: 0;
-  visibility: hidden;
-}
-
-/* Show the dropdown menu on hover */
-.nav-item:hover .dropdown-menu {
-  display: block;
-  opacity: 1;
-  visibility: visible;
-}
-
-/* Additional dropdown item styling */
-.dropdown-item {
-  color: white;
-  text-decoration: none;
-}
-
-.dropdown-item:hover {
-  background-color: #555;
-}
-</style>
+{% load static %}
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
